Fix UV index center alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -167,5 +167,5 @@ button {
 
 .UV {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
